force-app/main/default/objects/Big_Ride__b/Big_Ride__b.object-meta.xml
<CustomObject>
    <label>Big Ride</label>
    <pluralLabel>Big Rides</pluralLabel>
</CustomObject>