force-app/main/default/objects/Big_Ride__b/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Big Rides</relationshipLabel>
    <relationshipName>Big_Rides</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>