force-app/main/default/objects/Big_Ride__b/fields/End_Location_Lat_OLD__c.field-meta.xml
<CustomField>
    <fullName>End_Location_Lat_OLD__c</fullName>
    <label>End Lat OLD</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>