force-app/main/default/objects/Big_Ride__b/fields/End_Location_Long__c.field-meta.xml
<CustomField>
    <fullName>End_Location_Long__c</fullName>
    <label>End Location Long</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>