force-app/main/default/objects/Big_Ride__b/fields/Rental_Unit__c.field-meta.xml
<CustomField>
    <fullName>Rental_Unit__c</fullName>
    <label>Rental Unit</label>
    <referenceTo>Rental_Unit__c</referenceTo>
    <relationshipLabel>Big Rides</relationshipLabel>
    <relationshipName>Big_Rides</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>