force-app/main/default/objects/Big_Ride__b/fields/Start_Location_Lat__c.field-meta.xml
<CustomField>
    <fullName>Start_Location_Lat__c</fullName>
    <label>Start Location Lat</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>