force-app/main/default/objects/Big_Ride__b/fields/Start_Location_Long_OLD__c.field-meta.xml
<CustomField>
    <fullName>Start_Location_Long_OLD__c</fullName>
    <label>Start Long</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>