force-app/main/default/objects/Big_Ride__b/fields/Trip_ID__c.field-meta.xml
<CustomField>
    <fullName>Trip_ID__c</fullName>
    <label>Trip_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>