force-app/main/default/objects/Big_Ride__b/fields/Trip_IDzzz__c.field-meta.xml
<CustomField>
    <fullName>Trip_IDzzz__c</fullName>
    <label>Trip IDOLD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>